fdo#77268 SVG Import: fix null pointer dereference

Change-Id: I47c591f3d8b61d60f1258db3515c6805bf42304c